5/external-static-ip.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-ip
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
