5/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-service
spec:
  selector:
    app: webserver
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
