5/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  selector:
    app: webserver
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
