5/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  selector:
    app: webserver
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
