5/blue-green-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blue-green-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: blue.hwsw.leannet.hu
    http:
      paths:
      - path: /
        backend:
          serviceName: blue-service
          servicePort: 80
  - host: green.hwsw.leannet.hu
    http:
      paths:
      - path: /
        backend:
          serviceName: green-service
          servicePort: 80
